<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">S*Match</string>
    <string name="gameActivityTitle">Play!</string>
    <string name="game_goal">Find %d identical symbols.</string>
    <string name="game_points">Score:</string>
    <string name="game_round_points">Time left: %d s</string>
    <string name="subtitle">Brain Training Game</string>
    <string name="label_brain_index">Brain index: </string>
    <string name="button_instruction">Instruction</string>
    <string name="help">
    Find identical symbols as quick as possible!
    \n\n
    The score depends on the time: the faster you find them, the more points you will get for the level.
    \n\n
    There is a time limit for each level.
    A failure or timeout will finish game session.
    \n\n
    Your visual brain power index will be calculated from the score and level you reached.
    \n\n
    Good Luck!
    </string><string name="game_level">Level: </string>
    <string name="buttonShare">Share my result</string>
    <string name="share_msg">My S*Match brain index is %d out of 1000!</string>
    <string name="share_how">How do you want to share?</string>
    <string name="button_leaderboard">Leaderboard</string>
    <string name="button_initswarm">Join Community</string>
    <string name="button_NewGame">Demo (level 1)</string>
    <string name="button_continue">Play (level %1$d)</string>
    <string name="button_game_over">Continue</string>
    <string name="game_result">Your index: %1$d (+%2$d)</string>
    <string name="msg_invalid_selection">those 2 are not identical!</string>
    <!-- FACEBOOK APP ID -->
    <string name="fb_app_id">1504862259744546"</string>
    <string name="game_over">Game Over</string>
    <string name="button_share_on_facebook">Share my index on FB</string>
</resources>
