<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


<ImageView
        android:layout_margin="10dp"
        android:layout_marginRight="20dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/ic_launcher"
        />

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="5dp"
              android:layout_alignParentTop="true"
        >

    <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="S*Match"
            android:id="@+id/tv_start_apptitle"
            android:layout_gravity="left"
            android:textColor="@color/orange"
            android:textSize="50sp"
            android:singleLine="false"/>

    <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_start_subtitle"
            android:singleLine="true"
            android:layout_marginTop="6dp"
            android:text="@string/subtitle"
            android:layout_gravity="left"
            android:textIsSelectable="true"
            android:textColor="@color/base2"
            android:textSize="16sp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_start_brain_index"
            android:textColor="@color/blue"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:singleLine="false"
            android:text="@string/label_brain_index"
            android:layout_gravity="left"
            android:textIsSelectable="true"/>

    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_continue"
            android:id="@+id/buttonContinue"
            android:layout_gravity="center"
            android:clickable="true"
            android:onClick="continueGame"
            android:singleLine="true"
            android:background="@drawable/button_green"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:padding="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_NewGame"
            android:padding="5dp"
            android:id="@+id/buttonNewGame"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:onClick="startNewGame"
            android:singleLine="true"
            android:background="@drawable/button_green"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

    <Button
            android:id="@+id/buttonLeaderboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:clickable="true"
            android:onClick="showLeaderboard"
            android:singleLine="true"
            android:background="@drawable/button_green"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/button_leaderboard"/>

    <Button
            android:id="@+id/buttonInstruction"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_instruction"
            android:padding="5dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:onClick="showInstruction"
            android:singleLine="true"
            android:background="@drawable/button_green"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    <Button
            android:id="@+id/buttonShareOnFacebook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_share_on_facebook"
            android:padding="5dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:onClick="facebookLoginAndShare"
            android:singleLine="true"
            android:background="@drawable/button_green"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

</LinearLayout>

    <RelativeLayout
            android:padding="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


    <ImageButton
            android:id="@+id/shareButton"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_alignParentLeft="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:onClick="share"
            android:background="@drawable/share"
            />

    <ToggleButton
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text=""
            android:textOn=""
            android:textOff=""
            android:id="@+id/toggleSoundButton"
            android:layout_gravity="right"
            android:clickable="true"
            android:onClick="toggleSound"
            android:background="@drawable/toggle_sound_button"/>

    </RelativeLayout>

</RelativeLayout>
