<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

    <TextView
            android:id="@+id/tv_game_goal"
            android:layout_alignParentTop="true"
            android:text="@string/game_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#FFBB33"
            android:textSize="16dp"
            />

        <TextView
            android:id="@+id/tv_game_level"
            android:text="{level}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#33B5E5"
            android:textSize="16dp"
            android:layout_below="@+id/tv_game_goal"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            />
        <TextView
                android:id="@+id/tv_game_time_left"
                android:text="{time left}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="10dp"
                android:textColor="#FF8800"
                android:textSize="16dp"
                android:layout_below="@+id/tv_game_goal"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                />

    <GridView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/symbolsGrid"
            android:layout_marginTop="10dp"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:layout_below="@id/tv_game_level"
            android:horizontalSpacing="3dp"
            android:verticalSpacing="3dp"
            android:clickable="true"
            android:stackFromBottom="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_game_result"
            android:singleLine="false"
            android:layout_marginTop="6dp"
            android:text="@string/game_result"
            android:layout_gravity="center_horizontal"
            android:textIsSelectable="true"
            android:textColor="#FFBB33"
            android:textSize="20dp"
            android:layout_above="@+id/buttonGameOver"/>


    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/button_game_over"
            android:id="@+id/buttonGameOver"
            android:layout_gravity="center"
            android:clickable="true"
            android:onClick="onGameOver"
            android:singleLine="true"
            android:background="@drawable/button_green"
            android:textColor="#ffffff"
            android:padding="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"/>

</RelativeLayout>